app/assets/stylesheets/_layout.scss
@import "css3/transition";
@import "responsive";
@import "extends";

body {
  margin: 0;
  padding: 0;

  background-color: #ededed;
  background-image: image-url("fbg.png");
}

header, section, footer {
  display: block;
}

.fwrapper {
  @extend %clearfix;
}

.cwrapper {
  margin: 0 auto;
  max-width: 960px;
  padding: 0 15px;

  @include media(mobile) {
    padding: 0 11px;
  }
}

.clearfix { @extend %clearfix; }

header ul.actions {
  list-style: none;
  float: right;
  margin: -2px 0 0 0;
  padding: .1em 0 0;

  li {
    float: left;

    [class^="icon-"]:before, [class*=" icon-"]:before {
      width: auto;
      padding: 0 .2em;
    }
  }

  a {
    display: block;
    position: relative;
    padding: 0;

    color: #bbb;
    font-size: 1.3em;
    line-height: 1em;
    text-align: center;
    text-shadow: none;

    @include transition(color .3s ease-in-out .2s);

    &:hover {
      color: #333;
      text-decoration: none;
      @include transition(color .1s ease-in-out);
    }

    span.avatar {
      display: inline-block;
      width: 40px;
      height: 40px;
    }
  }
}

header#header {
  @extend .fwrapper;

  padding: 10px 0;
  background-image: image-url("hbg.png");
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);

  @include media(mobile) {
    padding: 0;
  }

  h1 {
    background: transparent image-url("logo3.png") no-repeat 0 50%;
    text-shadow: 0 1px 1px #aaa;

    font-size: 230%;
    float: left;
    padding: 5px 0 5px 75px;
    margin: 0;
    min-height: 50px;

    @include media(mobile) {
      font-size: 150%;
      padding: 10px 0 10px 60px;
      background: transparent image-url("logo3.png") no-repeat -10px 50%;
    }

    @media only screen and (max-width: 340px) {
      padding: 15px 0 5px 50px;
      font-size: 100%;
    }

    a {
      color: #333;
      @include transition(text-shadow .8s ease-in-out);

      &:hover {
        text-shadow: 0 1px 8px rgba(#333, 0.8);
        text-decoration: none;
      }
    }

    img {
      float: right;
      position: absolute;
      top: -20px;
      margin-left: 40px;
      z-index: 2000;

      @include media(mobile) {
        top: -40px;
        right: -20px;
      }
    }
  }

  .actions {
    font-size: 1.8em;
    margin-top: 6px;
    margin-right: 10px;

    i { padding: .1em 0; }

    .account {
      float: left;
      margin-top: -1px;
      padding: 0 .2em;

      span {
        background-color: #f9f9f9;
        background-image: image-url("avatar.gif");
        background-repeat: no-repeat;
        background-position: 50% 50%;

        box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
        @include transition(all .3s ease-in-out .2s);
      }

      img, span {
        float: right;
        display: block;
        margin: 0 auto;
        height: 40px;
        width: 40px;
      }

      &:hover span {
        box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
        @include transition(all .2s ease-in-out);
      }
    }

    @include media(mobile) {
      font-size: 1.6em;

      .account {
        padding-top: .2em;

        img, span {
          height: 24px;
          width: 24px;
        }
      }
    }
  }
}

#content {
  @extend .fwrapper;
  @extend .cwrapper;

  margin-bottom: 25px;

  .singelton {
    margin: 40px 0;
  }

  @include media(mobile) {
    margin-bottom: 2px;
    .singelton { margin: 0; }
  }

  section {
    margin: 14px 0 0 0;
    background-color: #fff;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);

    @include media(mobile) {
      margin: 4px 0 0 0;
    }

    header {
      @extend %clearfix;
      padding: 4px 15px 3px 15px;

      @include media(mobile) {
        padding: 2px 6px 2px 6px;
      }

      border-top: 1px solid #ddd;
      text-shadow: 0 1px 1px #aaa;
      background-image: image-url("hbg.png");
      // @include box-shadow(0 2px 2px rgba(0, 0, 0, 0.05) inset);

      ~ .content {
        border-top: 1px solid #ddd;
        box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05) inset;
      }

      h3, h4, h5 {
        margin: 4px 0;
      }

      ul.actions {
        list-style: none;
        float: right;
        margin: -2px 0 0 0;

        li {
          float: left;
        }

        a {
          @extend %action-link;
          &:hover { color: #333; }
        }

        @include media(mobile) {
          padding: 0;
        }
      }
    }

    .content {
      padding: 1px 15px 2px 15px;

      h2, h3, h4, h5 {
        margin-top: 16px;
      }

      @include media(mobile) {
        padding: 2px 6px 2px 6px;

        h2, h3, h4, h5 {
          margin-top: 6px;
          font-weight: bold;
        }
      }

      // > p:first-child { margin-top: 0; }
      // > p:last-child { margin-bottom: 0; }

      .add_notice {
        margin: 0 -2px;
        padding: 16px 10px;
        text-align: center;

        background: transparent image-url("add_notice.png") no-repeat top right;
      }
    }

    ul.content {
      margin: 0;
      padding: 0;
      list-style: none;

      li {
        padding: 6px 15px 6px 15px;

        &:not(:first-child) {
          border-top: 1px solid #ddd;
          box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05) inset;
        }
      }

      &.nav {
        li { padding: 0; }
        a {
          display: block;
          padding: 12px 15px 10px 35px;
          color: #333;
          font-weight: bold;
          @include transition(background-color .2s ease-in-out);

          &:hover {
            background-color: #efefef;
            @include transition(background-color .2s ease-in-out);
          }
        }
      }
    }

    .map {
      border-top: 1px solid #ccc;
    }
  }

  aside {
    section .content { padding: 0px 5px 1px; }
  }
}

footer#footer {
  color: #aaa;
  padding: 1px 10px 10px;
  text-align: left;
  text-shadow: 0 1px 1px #fff;
  margin-top: 10px;

  // background-color: rgba(255, 255, 255, .4);
  // @include box-shadow(0 1px 3px rgba(0, 0, 0, 0.1));

  p {
    font-size: 11px;
    font-size: 1.1rem;
    margin: 0;
    padding: 4px 4px 2px;

    span { float: right; }

    &:first-child {
      border: none;
      padding-top: 1px;
    }
  }

  a {
    color: #aaa;
    &:hover {
      color: #555;
    }
  }
}

